--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,5 @@ fabric.properties
 
 
 # End of https://www.gitignore.io/api/java,android,androidstudio
+app/google-services.json
+.idea/codeStyles/Project.xml
